Fix scrolling bug on mobile phones

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -15,7 +15,6 @@ html, body {
   font-family: 'Open Sans';
   font-size: 13px;
   width: 100%;
-  height: 100%;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
